Fix trade cost container alignment for AR

--- a/src/sass/binary_rtl.scss
+++ b/src/sass/binary_rtl.scss
@@ -1,2 +1,14 @@
 $LANGUAGE_DIRECTION : rtl;
-@import "all"
+@import "all";
+
+body.AR#betpage {
+    #content-holder {
+        #content {
+            #bet_container {
+                #bet_calculation_container {
+                    padding-right: 5px;
+                }
+            }
+        }
+    }
+}
